UI/UX modification

--- a/index.html
+++ b/index.html
@@ -163,25 +163,23 @@
 
         <!-- ── RIGHT PANEL (75%) — Sites + Bookmarks ─────────────────── -->
         <main id="rightPanel">
-          <!-- Favourite Sites (Launchpad) -->
+          <!-- Favourite Sites — skeleton shown until topsites.js runs -->
           <section id="topSitesArea" aria-labelledby="lp-heading">
-            <div
-              id="launchpadGrid"
-              class="launchpad-grid"
-              role="list"
-              aria-label="Most visited sites"
-            >
-              <!-- skeleton items sit directly in the grid (10 cells = 1 row) -->
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
-              <div class="lp-skeleton-item skeleton" aria-hidden="true"></div>
+            <div class="lp-outer" aria-hidden="true">
+              <div class="lp-track">
+                <div class="lp-page">
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                  <div class="lp-skeleton-item skeleton"></div>
+                </div>
+              </div>
             </div>
           </section>
 
