--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               />
             </svg>
             Sync
-            <span class="stg-badge">Coming soon</span>
+            <span class="stg-badge">Sync</span>
           </button>
         </li>
 
